[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/camera/movable_camera_battle.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/background/ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/clickable_floor/clickable_floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/maps/battle/battle_map.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/tile_highlight/selection.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu/editor_battle/editor_battle.gd" type="Script" id=7]
[ext_resource path="res://menu/editor_battle/ui/ui.tscn" type="PackedScene" id=10]

[node name="editor_battle" type="Node"]
script = ExtResource( 7 )

[node name="ui" parent="." instance=ExtResource( 10 )]

[node name="movable_camera_battle" parent="." instance=ExtResource( 1 )]

[node name="clickable_floor" parent="." instance=ExtResource( 3 )]

[node name="battle_map" parent="." instance=ExtResource( 4 )]

[node name="ground" parent="battle_map" instance=ExtResource( 2 )]

[node name="selection" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="on_add_object" from="ui" to="." method="_on_ui_on_add_object"]
[connection signal="on_cancel" from="ui" to="." method="_on_ui_on_cancel"]
[connection signal="on_card_dragging" from="ui" to="." method="_on_ui_on_card_dragging"]
[connection signal="on_randomize" from="ui" to="." method="_on_ui_on_randomize"]
[connection signal="on_remove_object" from="ui" to="." method="_on_ui_on_remove_object"]
[connection signal="on_toggle_nav" from="ui" to="." method="_on_ui_on_toggle_nav"]
[connection signal="on_update_tile" from="ui" to="." method="_on_ui_on_update_tile"]
[connection signal="on_map_ready" from="battle_map" to="." method="_on_battle_map_on_map_ready"]
[connection signal="on_navigation_updated" from="battle_map" to="." method="_on_battle_map_on_navigation_updated"]
